infra/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: closecount-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: closecount-client
  template:
    metadata:
      labels:
        app: closecount-client
    spec:
      containers:
        - name: client
          image: close-count-client:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
