infra/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: closecount-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: closecount-server
  template:
    metadata:
      labels:
        app: closecount-server
    spec:
      containers:
        - name: server
          image: close-count-server:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8005
