infra/k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: closecount-mongodb
spec:
  selector:
    app: closecount-mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
