infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: closecount-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: closecount.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: closecount-server
                port:
                  number: 8005
          - path: /
            pathType: Prefix
            backend:
              service:
                name: closecount-client
                port:
                  number: 3000
